test_suite/tests/ui/precondition/serialize_field_identifier.stderr
error: field identifiers cannot be serialized
 --> tests/ui/precondition/serialize_field_identifier.rs:4:1
  |
3 |   #[derive(Serialize)]
  |            --------- in this derive macro expansion
4 | / #[serde(field_identifier)]
5 | | enum F {
6 | |     A,
7 | |     B,
8 | | }
  | |_^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
